--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				color: #ffffff;
 			}
 			
-			.logoBox {
+			/*.logoBox {
 				height: 100%;
 				padding: 13px 0px;
-			}
+			}*/
 			
 			.logo {
 				display: inline-block;
@@ -132,13 +132,27 @@
 			.publish-story:active, .publish-story:hover{
 				color: #fff;
 			}
+			
+			.logo-text{
+			    color: #Fff;
+			    line-height: 44px;
+			    font-size: 20px;
+			}
+			
+			.mui-icon-search{
+				color: #fff;
+			}
 		</style>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav mui-clearfix">
 			<h1 id="title" class="mui-title mui-text-center"></h1>
-			<a class="mui-pull-left logoBox">
+			<div class="mui-pull-left logo-text logoBox">聚科技</div>
+			<div class="mui-pull-right" id="search_title">
+				<span class="mui-icon mui-icon-search" id="search_input"></span>
+			</div>
+			<!--<a class="mui-pull-left logoBox">
 				<img src="./images/logo2.png" class="logo" width="25px" height="18px" />
 			</a>
 			<div id="search_title" class="search-input">
@@ -146,7 +160,7 @@
 					<span class="mui-icon mui-icon-search"></span>
 					<span class="placeholder">请输入关键字</span>
 				</a>
-			</div>
+			</div>-->
 			<a href="javascript:;" class="publish-story mui-pull-right">
 				<span class="mui-icon iconfont icon-feiji"></span>
 			</a>
