首页图标，位置待调整

--- a/index.html
+++ b/index.html
@@ -44,47 +44,55 @@
 			.search-input .mui-input-clear {
 				background-color: #ffffff;
 			}					
-			
+		
 			.icon {
 				display: block;
-				width: 21px;
-				height: 19px;
+				width: 25px;
+				height: 25px;
 				margin: 5px auto 0px;
-				background-image: url("./images/tab_bar.png");
+				background-image: url("./images/tab_bar_new.png");
 				background-repeat: no-repeat;
-				background-size: 239px 77px;
+				background-size: 156px 56px;
+			}
+			
+			.icon-tab-bar0{
+				background-position: 1px -1px;
+			}
+			
+			.mui-active .icon-tab-bar0{
+				background-position: 1px -31px;
 			}
 			
 			.icon-tab-bar1 {
-				background-position: -37px -13px;
+				background-position: -34px 0px;
 			}
 			
 			.mui-active .icon-tab-bar1 {
-				background-position: -37px -43px;
+				background-position: -34px -32px;
 			}
 			
 			.icon-tab-bar2 {
-				background-position: -84px -13px;
+				background-position: -67px 1px;
 			}
 			
 			.mui-active .icon-tab-bar2 {
-				background-position: -84px -43px;
+				background-position: -67px -31px;
 			}
 			
 			.icon-tab-bar3 {
-				background-position: -130px -13px;
+				background-position: -100px 1px;
 			}
 			
 			.mui-active .icon-tab-bar3 {
-				background-position: -130px -43px;
+				background-position: -100px -32px;;
 			}
 			
 			.icon-tab-bar4 {
-				background-position: -178px -13px;
+				background-position: -133px 2px;
 			}
 			
 			.mui-active .icon-tab-bar4 {
-				background-position: -178px -43px;
+				background-position: -133px -31px;
 			}
 			
 			.mui-bar-tab .mui-tab-label {
@@ -167,7 +175,7 @@
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" data-wid="viewgroup" href="./html/index/index.html">
-				<span class="icon icon-tab-bar1"></span>
+				<span class="icon icon-tab-bar0"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
 
