1、分享功能微测试 2、个人中心未完成的功能隐藏

--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -95,25 +95,25 @@
 			</ul>
 			<div class="mui-card">
 		        <ul class="mui-table-view">		        
-		            <li class="mui-table-view-cell">
+		            <!--<li class="mui-table-view-cell">
 		                <a class="mui-navigate-right" href="javascript:;" data-guid="message">
-		                    <!--<span class="mui-badge mui-badge-danger">15</span>-->
+		                    <span class="mui-badge mui-badge-danger">15</span>
 		                    <span class="mui-icon mui-icon-chat icon-blue"></span>
 		                    	消息通知
 		                </a>
-		            </li>
+		            </li>-->
 		            <li class="mui-table-view-cell">
 		                <a class="mui-navigate-right" data-guid="history">	
 		                	<span class="mui-icon mui-icon-star icon-dark-yellow"></span>
 		                    	历史与收藏
 		                </a>
 		            </li>
-		             <li class="mui-table-view-cell myPublishLi">
+		             <!--<li class="mui-table-view-cell myPublishLi">
 		                <a class="mui-navigate-right" data-guid="myPublish">	
 		                	<span class="mui-icon mui-icon-flag icon-orange"></span>
 		                    	我的动态
 		                </a>
-		            </li>
+		            </li>-->
 		        </ul>
 		    </div>
 		    <div class="mui-card tech-pomp" style="display: none;">
