--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -345,6 +345,7 @@
 			 */
 
 			function open_detail(guid, title, source, time) {
+//				console.log(source)
 				mui.openWindow({
 					url: 'articleDetail.html',
 					id: 'articleDetail',
@@ -369,6 +370,10 @@
 					title = _this.find('.article-title').text().trim(),
 					source = _this.find('.source').text().trim(),
 					time = _this.find('.time').text().trim();
+				if(_this.find('.source').length == 0){
+					source = _this.next('p').find('.source').text().trim();
+					time = _this.next('p').find('.time').text().trim();
+				}
 				open_detail(guid, title, source, time);
 			});
 
@@ -451,7 +456,7 @@
 				if(session && session.userId) {
 					param.user_id = session.userId;
 				}
-				console.log(JSON.stringify(param),"****");
+//				console.log(JSON.stringify(param),"****");
 				mui.ajax('http://58.16.181.24:9203/mis-app/VisitingCard/articleType', {
 					data: param,
 					type: 'post', //HTTP请求类型
