--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			.search-input {
 				display: inline-block;
 				position: absolute;
-				left: 40px;
-				right: 10px;
+				left: 80px;
+				right: 15px;
 			}
 			
 			.search-input .mui-input-clear {
@@ -127,6 +127,7 @@
 				font-size: 16px;
 				margin: 0px;
 				padding: 0px;
+			    color: initial;
 			}
 			
 			.publish-story {
@@ -157,18 +158,18 @@
 		<header class="mui-bar mui-bar-nav mui-clearfix">
 			<h1 id="title" class="mui-title mui-text-center"></h1>
 			<div class="mui-pull-left logo-text logoBox">聚科技</div>
-			<div class="mui-pull-right" id="search_title">
+			<!--<div class="mui-pull-right" id="search_title">
 				<span class="mui-icon mui-icon-search" id="search_input"></span>
-			</div>
+			</div>-->
 			<!--<a class="mui-pull-left logoBox">
 				<img src="./images/logo2.png" class="logo" width="25px" height="18px" />
-			</a>
+			</a>-->
 			<div id="search_title" class="search-input">
 				<a class="search-box mui-text-left" id="search_input" href="javascript:;">
 					<span class="mui-icon mui-icon-search"></span>
 					<span class="placeholder">请输入关键字</span>
 				</a>
-			</div>-->
+			</div>
 			<a href="javascript:;" class="publish-story mui-pull-right">
 				<span class="mui-icon iconfont icon-feiji"></span>
 			</a>
