搜索内容改成新的webview显示

--- a/html/card/index.html
+++ b/html/card/index.html
@@ -249,6 +249,8 @@
 					}
 				},
 				error: function(xhr, type, error) {
+					console.error('http://58.16.181.24:9203/mis-app/VisitingCard/baseQuery');
+					console.error('card')
 					console.error(xhr);
 					console.error(type);
 				}
