--- a/html/techDictionary/index.html
+++ b/html/techDictionary/index.html
@@ -97,6 +97,21 @@
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item{
 				color:#666666;
 			}
+			
+			a.mui-control-item.mui-active{
+				position: relative;
+			}
+			
+			a.mui-control-item.mui-active:after{
+			    content: " ";
+			    display: block;
+			    height: 1px;
+			    background: #007aff;
+			    position: absolute;
+			    bottom: 0px;
+			    left: 20px;
+			    right: 20px;
+			}
 		</style>
 	</head>
 
