一些问题修改

--- a/html/scientistStory/detail.html
+++ b/html/scientistStory/detail.html
@@ -82,6 +82,10 @@
 				border: none;
 				z-index: 1000;
 			}
+			
+			.mui-bar-nav .mui-icon.mui-icon-back{
+				margin-top: 10px;
+			}
 		</style>
 	</head>
 
