--- a/index.html
+++ b/index.html
@@ -143,9 +143,11 @@
 			}
 			
 			.logo-text{
-			    color: #Fff;
-			    line-height: 44px;
-			    font-size: 20px;
+				width: 80px;
+				height: 100%;
+			    background: url('./images/logo_text.png') no-repeat;
+			    background-position: 0;
+			    background-size: 61px 30px;
 			}
 			
 			.mui-icon-search{
@@ -158,7 +160,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav mui-clearfix">
 			<h1 id="title" class="mui-title mui-text-center"></h1>
-			<div class="mui-pull-left logo-text logoBox">聚科技</div>
+			<div class="mui-pull-left logo-text logoBox"></div>
 			<div class="mui-pull-right" id="search_title">
 				<span class="mui-icon mui-icon-search" id="search_input"></span>
 			</div>
